2009-03-11 Mario Domgoergen <dom@math.uni-bonn.de>
	
	* Added testsuite t/01-basic.t (Coverage: 88.1%)
	* Adjusted test names
	* Added variable ignore_query

2009-03-10 Mario Domgoergen <dom@math.uni-bonn.de>

	* Added documentation